feat add tags to recipes